--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+ipykernel
 langchain
 langchain-community
 langchain-ollama              
@@ -8,6 +9,7 @@ langchain_core
 langchain-experimental
 neo4j
 tiktoken
+jupyter
 yfiles_jupyter_graphs
 python-dotenv
 json-repair
