--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,24 @@
 ipykernel
+streamlit
+st-annotated-text
+streamlit-folium
+folium
+docx2txt
+wordcloud
+nltk
+numpy
+numba
+pandas
+geopandas
+neo4j
+tiktoken
+weaviate
+weaviate-client
+jupyter
+yfiles_jupyter_graphs
+graphviz
+python-dotenv
+json-repair
 langchain
 langchain-community
 langchain-ollama              
@@ -7,9 +27,8 @@ langchain-anthropic
 langchain-neo4j
 langchain_core
 langchain-experimental
-neo4j
-tiktoken
-jupyter
-yfiles_jupyter_graphs
-python-dotenv
-json-repair
+unstructured>=0.16.12 
+onnx>=1.17.0
+protobuf==5.29.2
+chromadb>=0.4.22
+pydantic==2.10.4
