[#1b] - Building RAG pipeline

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
 ipykernel
 streamlit
-st-annotated-text
 streamlit-folium
 folium
 docx2txt
+PyPDF2
 wordcloud
 nltk
 numpy
-numba
+scipy
 pandas
 geopandas
+matplotlib
+plotly
 neo4j
+networkx
 tiktoken
-weaviate
-weaviate-client
+wordcloud
+twilio
 jupyter
 yfiles_jupyter_graphs
 graphviz
@@ -30,5 +33,4 @@ langchain-experimental
 unstructured>=0.16.12 
 onnx>=1.17.0
 protobuf==5.29.2
-chromadb>=0.4.22
 pydantic==2.10.4
